Re-set up OnboardingApp module. #72